--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Workflow</title>
+    <title>Connect Starter Package</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -21,33 +21,33 @@
     <nav class="navbar navbar-default hidden">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button id='left-nav-toggle' aria-controls="left-nav" aria-expanded="false" class="navbar-toggle left" data-target="#left-nav" data-toggle="collapse" type="button"> 
-            <span class="sr-only">Toggle navigation</span> 
-            <span class="icon-bar"></span> 
-            <span class="icon-bar"></span> 
-            <span class="icon-bar"></span> 
+          <button id='left-nav-toggle' aria-controls="left-nav" aria-expanded="false" class="navbar-toggle left" data-target="#left-nav" data-toggle="collapse" type="button">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
 
-          <button aria-controls="right-nav" aria-expanded="false" class="navbar-toggle collapsed" data-target="#right-nav" data-toggle="collapse" type="button"> 
-            <span class="sr-only">Toggle navigation</span> 
-            <span class="icon-bar"></span> 
-            <span class="icon-bar"></span> 
-            <span class="icon-bar"></span> 
+          <button aria-controls="right-nav" aria-expanded="false" class="navbar-toggle collapsed" data-target="#right-nav" data-toggle="collapse" type="button">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
 
           <div class="popover dataBox" id="left-nav">
             <div class="navigation">
-              <span class="hidden icon-nav-dock2">&nbsp;</span> 
+              <span class="hidden icon-nav-dock2">&nbsp;</span>
               <span class="icon-nav-expand2"></span>
             </div>
             <div class="nav_bottom" style="height: 12px; display: none;"></div>
           </div>
         </div>
-       
+
         <div id="right-nav" aria-expanded="false"  class="navbar-collapse collapse ">
           <ul class="nav navbar-nav">
           </ul>
-          <ul class="nav navbar-nav navbar-right">    
+          <ul class="nav navbar-nav navbar-right">
             <li><%#= link_to( , new_user_session_path, :remote => true) %></li>
           </ul>
         </div>
@@ -59,13 +59,11 @@
         <%= yield :breadcrumbs %>
       </div>
       <% if is_app_admin? %>
-        <div id='admin_button' class="pull-right" style="margin: -25px 18px 0px 0px;"> 
+        <div id='admin_button' class="pull-right" style="margin: -25px 18px 0px 0px;">
           <div class="btn-group dropdown">
             <a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span>
             </a>
             <ul class="dropdown-menu" style="left: -64px;min-width: 120px;">
-              <li><%= link_to 'Home', workflows_path, :remote => true %></li>
-              <li><%= link_to 'Resque', admin_resque_path, :remote => true %></li>
               <li><%= link_to 'App Instances', admin_app_instances_path, :remote => true %></li>
             </ul>
           </div>
