Added products example

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,7 @@
             </a>
             <ul class="dropdown-menu" style="left: -64px;min-width: 120px;">
               <li><%= link_to 'App Instances', admin_app_instances_path, :remote => true %></li>
+              <li><%= link_to 'Delayed Job', admin_delayedjob_path, :remote => true %></li>
             </ul>
           </div>
         </div>
