Added features tab

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,7 @@
     <ul class="nav tab-header">
       <li class="active"><a href="#rest">REST Call</a></li>
       <li class=""><a href="#soap">SOAP Call</a></li>
+      <li class=""><a href="#gem">Gem Features</a></li>
       <li class=""><a href="#table">Data Table</a></li>
     </ul>
     <div class="tab-content">
@@ -20,6 +21,9 @@
       </div>
       <div class="tab-pane" id="soap">
         <%= render 'soap' %>
+      </div>
+      <div class="tab-pane" id="gem">
+        <%= render 'features' %>
       </div>
       <div class="tab-pane" id="table">
         <%= render 'products' %>
