--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,6 +19,37 @@
           </div>
         <% end %>
 
+        <div class="row form-group">
+          <div class="col-lg-12 col-md-12 controls <%= f.object.errors[:name].empty? ? '' : 'has-error has-feedback' %>">
+            <%= f.text_field :name, {:class => 'form-control', :placeholder => true} %>
+            <%= '<span class="glyphicon glyphicon-remove form-control-feedback"></span>'.html_safe if !f.object.errors[:name].empty?  %>
+            <% f.object.errors[:name].uniq.each do | message| %>
+               <p class="help-block" ><%= message %></p>
+            <% end %>
+          </div>
+        </div>
+
+        <div class="row form-group">
+          <div class="col-lg-12 col-md-12 controls <%= f.object.errors[:category].empty? ? '' : 'has-error has-feedback' %>">
+            <%= f.text_field :category, {:class => 'form-control', :placeholder => true} %>
+            <%= '<span class="glyphicon glyphicon-remove form-control-feedback"></span>'.html_safe if !f.object.errors[:category].empty?  %>
+            <% f.object.errors[:category].uniq.each do | message| %>
+               <p class="help-block" ><%= message %></p>
+            <% end %>
+          </div>
+        </div>
+
+        <div class="row form-group">
+          <div class="col-lg-12 col-md-12 controls <%= f.object.errors[:price].empty? ? '' : 'has-error has-feedback' %>">
+            <%= f.text_field :price, {:class => 'form-control', :placeholder => true} %>
+            <%= '<span class="glyphicon glyphicon-remove form-control-feedback"></span>'.html_safe if !f.object.errors[:price].empty?  %>
+            <% f.object.errors[:price].uniq.each do | message| %>
+               <p class="help-block" ><%= message %></p>
+            <% end %>
+          </div>
+        </div>
+
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
