--- a/app/views/shared/_filters.html.erb
+++ b/app/views/shared/_filters.html.erb
@@ -4,17 +4,17 @@
 <% filter_count = defined?(filter_count) ? filter_count : nil %>
 <% width = defined?(table_filter["width"]) ? table_filter["width"] : "100%" %>
 <% allow_clear = table_filter["allow-clear"] ? table_filter["allow-clear"] : true %>
+
 <% if table_filter["type"] == "checkbox" %>
   <div class="btn-group">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="hold"  aria-haspopup="true" aria-expanded="false">
       <%= prompt %> <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu" style='padding: 0px 15px'>
+    <ul class="dropdown-menu" >
       <li>
         <% table_filter["values"].each do |type| %>
-          <div class="checkbox checkbox-success">
-            <% checked = type.class == Array ? table_filter["selection"].include?(type[1].to_s) : table_filter["selection"].include?(type) %>
-            <input type="checkbox" name='<%= table_filter["name"].parameterize('_') %>[]' <%= checked ? 'checked' : ''%> value="<%= type.class == Array ? type[1] : type %>"><label style="white-space: nowrap" for="<%= table_filter["name"].parameterize('_') %>"><%= type.class == Array ? type[0] : type %></label>
+          <div class="checkbox checkbox-success" style='margin-left: 15px;'>
+            <input type="checkbox" name='<%= table_filter["name"].parameterize('_') %>[]' <%= table_filter["selection"].include?(type) ? 'checked' : ''%> value="<%= type %>"><label for="<%= table_filter["name"].parameterize('_') %>"><%= type %></label>
           </div>
         <% end %>
       </li>
