Add session store to db

--- a/app/views/application/errors.html.erb
+++ b/app/views/application/errors.html.erb
@@ -1,6 +1,6 @@
 <% content_for :breadcrumbs do %>
   <ul class="breadcrumb">
-    <li><%= link_to('Home', workflows_path, :remote => true) %></li>
+    <li><%= link_to('Home', root_path, :remote => true) %></li>
     <li class="active">Errors</li>
   </ul>
 <% end %>
