--- a/app/views/admin/app_instances/index.html.erb
+++ b/app/views/admin/app_instances/index.html.erb
@@ -12,17 +12,14 @@
       <h2>App Instances</h2>
     </div>
     <div class='tab-pane active'>
-      <% table_filters = capture do %>
-      <% end %>
       <% table_actions = capture do %>
       <% end %>
-      <% columns  =[
-        { "title": "Id", "data": "zuora_connect_app_instances__id",'visible': true }
-      ] %>
-      <%= render(:partial=>"shared/table.html.erb", locals: {:table_name => "app_instances", :aoData => [], :columns => columns, :sort => [[ 0, "asc" ]], :table_filters => table_filters, :table_views => {:table => true, :grid =>false}, :initial_size => 25, :table_actions => table_actions, :table_url =>  admin_app_instances_path(format: "json") }.merge(request.query_parameters), :formats => [:html])  %>
+      <%= render_datatable(ZuoraConnect::AppInstance, admin_app_instances_path(format: "json"), :table_actions => table_actions, :table_filters => [], :columns => datatable_columns(ZuoraConnect::AppInstance)) %>
     </div>
   </div>
 </div>
 
 <% content_for :scripts do %>
 <% end %>
+
+
