--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,555 @@
-#flow, #swimlane {
-  background: image-url('graphpaper-background.png');
-  margin-top: 0px;
+/*
+IF YOU SET A Z-INDEX GREATER THAN 1050 UPDATE THE LOGIN MODAL Z-INDEX
+Z-INDEX >200 for left nav
+*/
+
+
+#content{
+  padding: 10px 14px;
+  position: relative;
+  border-bottom: 1px solid #F2F2E8;
+  min-height: 500px;
 }
+
+.content {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: block;
+}
+
+.popover { max-width: 550px;}
+
+blockquote {
+  font-size: 12.5px;
+}
+
+p.help-block{
+  margin-bottom:0px;
+  margin-left: 10px
+}
+
+.border-radiusless{
+  border-radius: 0 !important;
+}
+
+
+input[type=checkbox].form-control {
+  margin: 4px 0 0;
+  height: 21px;
+}
+
+.form-horizontal .has-feedback .input-group .form-control-feedback {
+  top: 0;
+  right: 30px;
+  z-index: 30;
+}
+
+form {
+  &.form-compacted {
+    .form-group {
+      margin-bottom: 5px;
+    }
+  }
+  &.loading {
+    .modal-body {
+      opacity: .15;
+    }
+    i#loading_form_icon {
+      visibility: visible;
+      color: #3c4d55;
+    }
+  }
+
+  i#loading_form_icon {
+    display: inline-block;
+    position: absolute;
+    font-size: 100px;
+    right: 44%;
+    top: 40%;
+    visibility: hidden;
+    z-index: 1000;
+  }
+}
+
+i#loading_form_icon {
+  display:none;
+}
+
+.modal-header {
+  background-color: #384B5D;
+  color: #fff;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+#z_hub_modal {
+  div.popover {
+    &.left, &.top {
+      max-width:500px;
+    }
+  }
+}
+
+.green-header {
+  color:#fff;
+
+  font-size:18px;
+  background-color: #6C96A1;
+  border-radius: 2px;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding: 10px;
+  margin-top: -10px;
+  h2 {
+    font-size:19px;
+    color:#fff;
+    letter-spacing:0px;
+    margin:0px;
+  }
+}
+
+.tab-pane{
+  margin-top:10px;
+}
+
+.z-background {
+  background-image: url(asset_path('zuora-logo-faded.svg'));
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 75%;
+}
+
+.img-thumbnail-dark {
+  display: inline-block;
+  height: auto;
+  max-width: 100%;
+  padding: 4px;
+  line-height: 1.428571429;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.center{
+  text-align: center
+}
+
+td.center{
+  vertical-align: middle !important;
+  text-align: center
+}
+
+.word-break{
+  word-wrap: break-word;
+}
+
+h1.slim, h2.slim, h3.slim, h4.slim, h5.slim, h6.slim, hr.slim{
+  margin:5px 0px;
+}
+
+.translation_missing{
+  color: red;
+  font-size: 15px;
+}
+
+.input-sm, .input-group-sm > .form-control, .input-group-sm > .input-group-addon, .input-group-sm > .input-group-btn > .btn {
+  height: 30px;
+}
+.form-horizontal .form-control-feedback{
+  top: 0px;
+  right: 15px;
+  width: 34px;
+}
+.form-control-feedback {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  z-index: 2;
+  display: block;
+  width: 34px;
+  height: 30px;
+  line-height: 34px;
+  text-align: center;
+  pointer-events: none;
+}
+
+body nav {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 13px;
+  line-height: 16px
+}
+/************** Appstore App Show **************/
+#app-logo-icon{
+  background-color: white;
+  height:100px;
+  width:100px;
+}
+
+/***************** Bread Crumb *****************/
+.breadcrumb{
+  box-shadow: 0px 1px 2px #ccc;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 12px;
+}
+
+
+/***************** Navbar  *****************/
+.navbar {
+  border: 0px solid transparent;
+
+  &.navbar-default .navbar-nav > li > a{
+    .caret {
+      font-size: 15px;
+      margin-left: 15px;
+    }
+    &:hover, &:focus {
+      .caret{
+        color: #6ec5ab;
+      }
+    }
+  }
+}
+
+
+/***************** Dropdown Menu Left  *****************/
+
+body nav .navbar-toggle.left {
+  display: block;
+  float: left;
+  margin-top: 6px;
+  width: 40px;
+  height: 32px;
+
+  .icon-bar{
+    width: 20px;
+    margin-top: 4px;
+  }
+
+  .menu-bar-1{
+    position: absolute;
+    top:9px;
+    margin-top:0px !important;
+    margin-right:20px;
+    padding-right:20px;
+  }
+  .menu-bar-2{
+    position: absolute;
+    top:17px;
+    margin-top:0px !important;
+  }
+  .menu-bar-3{
+    position: absolute;
+    top:25px;
+    margin-top:0px !important;
+  }
+}
+
+/***************** Dropdown Menu Extra Styles  *****************/
+.dropdown-menu {
+  min-width: 164px;
+  padding: 6px 0;
+
+  > li > a {
+    padding: 4px 8px 4px 8px;
+    span.fa {
+      margin-right: 10px;
+    }
+    span.glyphicons {
+      padding-left: 0px;
+      margin-right: 4px;
+      &:before {
+        font-size: inherit;
+        position: inherit;
+        color: $dropdown-link-color;
+      }
+    }
+    &:hover{
+      span.glyphicons {
+        &:before {
+          color: $dropdown-link-hover-color;
+        }
+      }
+    }
+  }
+}
+
+/***************** Arrows for right navbar dropdown  *****************/
+@media (min-width: $grid-float-breakpoint-max) {
+  .navbar-right ul.dropdown-menu {
+    &:after, &:before {
+      bottom: 100%;
+      left: 89%;
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+    }
+    &:after {
+      border-color: rgba(136, 183, 213, 0);
+      border-bottom-color: $dropdown-bg;
+      border-width: 8px;
+      margin-left: -8px;
+    }
+    &:before {
+      border-color: rgba(194, 225, 245, 0);
+      border-bottom-color: $dropdown-border;
+      border-width: 9px;
+      margin-left: -9px;
+    }
+  }
+  .navbar-right {
+    line-height: 22px;
+
+    ul{
+      list-style:none;
+      list-style-type:none;
+
+      &.zuora-settings-arrow{
+        &:after, &:before {
+          left: 95%;
+        }
+      }
+    }
+  }
+}
+
+#right-nav{
+  padding-right:10px;
+}
+.settings-top{
+  a{
+    margin-top:2px;
+    padding-top:15px;
+  }
+}
+
+
+#settings-li{
+  .zuora-settings-caret{
+    margin-right:5px;
+    margin-left:15px;
+  }
+
+  &:hover{
+    .zuora-settings-caret{
+      color: #6ec5ab;
+    }
+  }
+
+  .divider{
+    margin: 5px 0;
+  }
+
+  a {
+    padding: 15px 0px 15px 0px;
+  }
+
+  ul{
+    .dropdown-toggle{
+      color: #6ec5ab;
+    }
+
+    .collapsed{
+      color: #787878;
+    }
+
+    a{
+      padding: 4px 8px 4px 8px;
+      font-family: "Intel Clear", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      line-height: 18px;
+      color: #787878;
+      word-spacing:0px;
+      font-stretch: normal;
+
+      .zuora-span{
+        margin-left:-12px;
+      }
+    }
+  }
+}
+
+.zuora-settings-arrow{
+   margin-top:1px;
+  }
+
+
+/***************** Left Nav *****************/
+.dataBox {
+  top: 50px;
+  border-radius: 0px;
+  width: 202px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #F2F2E8;
+  border-bottom: none;
+  border-left: none;
+  padding-right: 0px;
+  font-size: 15px;
+  z-index: 200;
+  border-right-color: rgb(219, 219, 219);
+  border-right-style: solid;
+  border-right-width: 1px;
+
+
+  > div.navigation {
+    text-align: right;
+    padding: 5px 10px;
+    background: #f1f1f1;
+    height: 32px;
+
+    > span {
+      cursor: pointer;
+
+      &.icon-nav-collase2, &.icon-nav-dock2{
+        color: #6ec5ab;
+        font-weight: bold;
+      }
+    }
+  }
+  ul {
+    padding-left:0;
+    margin:0;
+    list-style: none;
+
+    &.zuora-menu {
+      font-family: "Intel Clear", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      line-height: 22.5px;
+
+      > li.dropdown li {
+        padding-left: 43px;
+      }
+
+      a{
+        font-size:14px !important;
+        line-height:20px;
+      }
+      .collapse{
+        li:last-child {
+          padding-bottom: 4px !important;
+        }
+      }
+    }
+
+    a {
+      font-size: 14px;
+      display: block;
+      padding: 5px 0px;
+
+      &:hover, &:focus {
+        text-decoration: none;
+      }
+
+      i {
+        float: right;
+        font-size: 15px;
+        margin-right: 9px;
+        margin-top: 0px;
+        line-height: 1.5;
+        color: inherit;
+      }
+      span.fa {
+        width: 15px;
+        text-align: center;
+      }
+    }
+    > li.dropdown {
+      ul.tools a, ul a{
+        font-size: 12px;
+        line-height: 20px;
+      }
+      > a {
+        color: #ffffff;
+        background-color: #6b7882;
+        padding: 5px 0 5px 13px;
+        line-height: 26px;
+
+        &.collapsed {
+          color:#384b5d;
+          background-color: #ffffff;
+        }
+      }
+      > div.collapse {
+        background-color:#f2f4f8;
+      }
+
+      /* Sub menu overides */
+      li {
+        padding-left: 29px;
+
+        a {
+          background-color: inherit !important;
+          color:#384b5d;
+          padding-top: 6px;
+          padding-bottom: 6px;
+
+          &.active, &:hover, &:focus {
+            color: #3399cc;
+          }
+        }
+      }
+    }
+  }
+}
+
+#zuora-menu-active{
+  a{
+    color: #3399cc !important;
+  }
+}
+
+/****************** Icon ******************/
+
+.zuora-menu-icon{
+  margin-right:5px;
+  margin-left:0px !important;
+}
+
+
+/***************** Footer  *****************/
+.footer{
+  > ul {
+    text-align: center;
+    padding: 10px 0px;
+    >li {
+      display: inline;
+      padding: 0px 10px;
+      color: #666;
+    }
+  }
+  > div {
+    text-align: center;
+    color: rgb(102, 102, 102);
+    margin-bottom: 12px;
+  }
+}
+/*************** Panel ********************/
+ .panel-heading{
+    color: #384A5C !important;
+  }
+
+  .panel{
+    color: #8CADB6 !important;
+  }
+
+  .panel-body{
+    color: black;
+  }
+
+.radio-no-gutter, .checkbox-no-gutter {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.grid_view{
+  padding-right:0px;
+}
+
+td.actions.center {width: 5px;}
 
 .context-menu-item {
   padding: .4em 2.3em;
@@ -21,370 +569,9 @@ li.context-menu-icon {
     cursor: pointer;
     background-color: #6ec5ab;
   }
-  &.context-menu-icon-iterate {
-    background-image: image-url('iterate.png');
-  }
-  &.context-menu-icon-export {
-    background-image: image-url('export.png');
-  }
-  &.context-menu-icon-query {
-    background-image: image-url('query.png');
-  }
-  &.context-menu-icon-create {
-    background-image: image-url('create.png');
-  }
-  &.context-menu-icon-update {
-    background-image: image-url('update.png');
-  }
-  &.context-menu-icon-delete {
-    background-image: image-url('delete.png');
-    &:before {
-      content: '';
-    }
-  }
-  &.context-menu-icon-new_product {
-    background-image: image-url('newproduct.png');
-  }
-  &.context-menu-icon-remove_product {
-    background-image: image-url('removeproduct.png');
-  }
-  &.context-menu-icon-suspend {
-    background-image: image-url('suspend.png');
-  }
-  &.context-menu-icon-resume {
-    background-image: image-url('resume.png');
-  }
-  &.context-menu-icon-cancel {
-    background-image: image-url('cancel.png');
-  }
-  &.context-menu-icon-notifications {
-    background-image: image-url('notifications.png');
-  }
-  &.context-menu-icon-data {
-    background-image: image-url('data.png');
-  }
-  &.context-menu-icon-write_off {
-    background-image: image-url('writeoff.png');
-  }
-  &.context-menu-icon-approval {
-    background-image: image-url('approval.png');
-  }
-  &.context-menu-icon-delay {
-    background-image: image-url('delay.png');
-  }
-  &.context-menu-icon-email {
-    background-image: image-url('email.png');
-  }
-  &.context-menu-icon-s_m_s, &.context-menu-icon-sms {
-    background-image: image-url('sms.png');
-  }
-  &.context-menu-icon-callout {
-    background-image: image-url('callout.png');
-  }
-  &.context-menu-icon-phone_call {
-    background-image: image-url('phonecall.png');
-  }
-  &.context-menu-icon-logic {
-    background-image: image-url('logic.png');
-  }
-  &.context-menu-icon-amendment {
-    background-image: image-url('amendment.png');
-  }
-  &.context-menu-icon-retrieve {
-    background-image: image-url('retrieve.png');
-  }
-  &.context-menu-icon-crud {
-    background-image: image-url('crud.png');
-  }
-  &.context-menu-icon-other {
-    background-image: image-url('other.png');
-  }
-  &.context-menu-icon-if {
-    background-image: image-url('if.png');
-  }
-  &.context-menu-icon-case {
-    background-image: image-url('case.png');
-  }
-}
-.select2-container .select2-selection--multiple {
-  .select2-search--inline, .select2-search__field {
-    width: 100% !important;
-  }
-}
-.modal-header {
-  background-color: transparent !important;
-  color: #384B5D !important;
-}
-.modal-header {
-  border-bottom: 1px solid #f1f1f1 !important;
-}
-.modal-header .close {
-    margin-top: 5px !important;
-}
-.modal-content ul.tab-header li.active a {
-  background: #384B5D !important;
-  color: #fff !important;
-}
-.modal-content ul.tab-header li:not(.active) a:hover {
-  background: #eaebef !important;
-  color: #384B5D !important;
-}
-.modal-content ul.tab-header li a {
-  background: #f1f1f1 !important;
-  color: #384B5D !important;
 }
 
-.has-error.has-feedback input::-webkit-input-placeholder {
-  color: #a94442 !important;
-}
-.has-error.has-feedback input::-moz-placeholder{
-  color: #a94442 !important;
-}
-table.dataTable .odd.selected, table.dataTable .even.selected {
-  background-color: #ededed;
-}
-
-.select2-results__options--nested{
-  padding-left: 10px
-}
-.select2 .border-radius-less {
-  border-radius:0px !important
-}
-
-.select2-container--bootstrap .select2-results__group {
-  color: #394b5b;
-  font-size: 14px;
-  font-weight: 800;
-}
-
-
-.fa-spin-custom, .glyphicon-spin {
-    -webkit-animation: spin 1000ms infinite linear;
-    animation: spin 1000ms infinite linear;
-}
-@-webkit-keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(359deg);
-        transform: rotate(359deg);
-    }
-}
-@keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(359deg);
-        transform: rotate(359deg);
-    }
-}
-
-
-.box {
-  width: 150px;
-  height: 75px;
-  background: #eaebef;
-  text-align: center;
-  border-radius: 4px;
-  border: 1px solid #d0d5d8;
-  margin: 10px 5px;
-
-  &.success {
-    border: 1px solid #6EC5AB;
-  }
-  &.error {
-    border: 1px solid #C05F68;
-  }
-  &.queued, &.processing, &.pending {
-    border: 1px solid #d58512;
-  }
-  &.error, &.queued, &.processing, &.pending  {
-   -webkit-animation-name: pulse;
-    animation-name: pulse;
-    -webkit-animation: pulse 1s ease-out;
-    -webkit-animation-iteration-count: infinite;
-  }
-  a{
-    &:hover, &:focus{
-      text-decoration:none;
-    }
-  }
-  .title {
-    padding: 5px;
-  }
-  .actions {
-    padding: 5px;
-  }
-  h6 {
-    word-break: break-word;
-  }
-  &.active {
-    -webkit-box-shadow: inset 0px 0px 0px 0px #ABABAB, 1px 0px 13px 3px #384B5D !important;
-  }
-  &:hover{
-    -webkit-box-shadow: inset 0px 0px 0px 0px #ABABAB, 1px 0px 13px 1px #DDDDDD;
-    .title {
-      display: none;
-    }
-    .actions{
-      display: block !important;
-    }
-  }
-}
-
-@-webkit-keyframes pulse {
-  0% { -webkit-transform: scale(1); }
-  50% { -webkit-transform: scale(1.1); }
-  100% { -webkit-transform: scale(1); }
-}
-@keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.1); }
-  100% { transform: scale(1); }
-}
-@-webkit-keyframes shake {
-  0%, 100% {-webkit-transform: translateX(0);}
-  10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
-  20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
-}
-@keyframes shake {
-  0%, 100% {transform: translateX(0);}
-  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
-  20%, 40%, 60%, 80% {transform: translateX(10px);}
-}
-
-.info-item{
-  .info-header{
-    background-color: #384B5D;
-    border-bottom: 1px solid #384B5D;
-    box-sizing: border-box;
-    color: white;
-    width: 100%;
-    height: 35px;
-    padding: 2px;
-    margin: 0;
-
-    h4{
-      display:inline-block;
-      padding-left: 5px;
-    }
-    i{
-      font-size: 16px;
-      padding: 7px 7px;
-      float: right;
-      &:hover, &:focus {
-        font-weight: bold;
-      }
-    }
-  }
-  .info-body{
-    padding: 10px;
-  }
-}
-
-.workflow-container{
-  overflow-x: scroll;
-  padding-bottom:60px;
-  padding-top: 30px;
-  ::-webkit-scrollbar {
-    background-color: #fff;
-    color: #fff;
-  }
-}
-
-.btn-zuora{
-  color: #747d84;
-  background-color: #eaebef;
-  border-color: #747d84;
-
-  &:hover, &:focus {
-    color: white;
-    background-color: #72c3ac;
-    border-color: #4baf93;
-  }
-}
-
-.select2-container--bootstrap {
-  .select2-selection__clear {
-    margin-right: 5px;
-    margin-left: 5px;
-    line-height: 1.4;
-  }
-}
-
-.btn-group.select2-bootstrap-prepend .select2-container--bootstrap .select2-selection {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-}
-.btn-group.select2-bootstrap-append .select2-container--bootstrap .select2-selection {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-input[type="radio"],input[type="checkbox"] {
-  margin: 4px 0 0;
-  margin-top: 1px;
-  line-height: normal;
-}
-
-div.jsoneditor-tree table.jsoneditor-tree {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  margin: 0;
-  margin-top: 10px;
-}
-
-div.jsoneditor {
-  color: #1A1A1A;
-  border: none;
-}
-div.jsoneditor-menu {
-  background-color: #384B5D;
-  border-bottom: 1px solid #384B5D;
-}
-div.jsoneditor-contextmenu ul li button.jsoneditor-selected, div.jsoneditor-contextmenu ul li button.jsoneditor-selected:hover, div.jsoneditor-contextmenu ul li button.jsoneditor-selected:focus {
-    color: white;
-    background-color: #6ec5ab;
-}
-div.jsoneditor-outer {
-  min-height:300px;
-}
-.update_fields .form-control {
-  height: 34px
-}
-
-form {
-  &.loading {
-    .loading-hide{
-      opacity: .15;
-    }
-  }
-}
-textarea.jsoneditor-text, .ace-jsoneditor {
-  min-height: 400px;
-}
-.btn-margin-sm{
-  margin: 2px
-}
-.form-control2 {
-    display: block;
-    width: 100%;
-    padding: 6px 12px;
-    font-size: 12px;
-    line-height: 1.4;
-    color: #555555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+div#organizations_datatable_content .grid_view{
+  margin-top:15px !important;
+  padding-right:15px !important;
 }
