--- a/app/assets/stylesheets/zuora/custom.scss
+++ b/app/assets/stylesheets/zuora/custom.scss
@@ -1,401 +1,252 @@
-#content{
-  padding: 10px 14px;
-  position: relative;
-  /*border-bottom: 1px solid #F2F2E8;*/
-  min-height: 500px;
-}
+.alerts {
+  background: #d3ede5;
+  padding: 8px 0px;
 
-.content {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  display: block;
-}
-
-.popover { max-width: 550px;}
-
-
-blockquote {
-  font-size: 12.5px;
-}
-
-p.help-block{
-  margin-bottom:0px;
-  margin-left: 10px
-}
-
-.border-radiusless{
-  border-radius: 0 !important;
-}
-
-
-input[type=checkbox].form-control {
-  margin: 4px 0 0;
-  height: 21px;
-}
-
-.form-horizontal .has-feedback .input-group .form-control-feedback {
-  top: 0;
-  right: 30px;
-  z-index: 30;
-}
-
-form {
-  &.form-compacted {
-    .form-group {
-      margin-bottom: 5px;
-    }
+  &.production {
+    background: #D4ECE9;
   }
-  &.loading {
-    .modal-body {
-      opacity: .15;
-    }
-    .overlay  {
-      display: block;
-      i#loading_form_icon {
-        visibility: visible;
-        color: #3c4d55;
-      }
-    }
-  }
-  .overlay {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 61px;
-    left: 0;
 
-    i#loading_form_icon {
-      display: inline-block;
-      position: absolute;
-      font-size: 60px;
-      right: 45%;
-      top: 55%;
-      visibility: hidden;
-      z-index: 1000;
+  p {
+    padding: 0px 15px;
+    margin: 0px;
+    line-height: 11px;
+    font-size: 11px;
+    color: #384b5d;
+    height: 11px;
+
+    span {
+      font-weight: bold;
     }
   }
 }
 
-i#loading_form_icon {
-  display:none;
-}
+.settings_block {
+  margin-bottom: 5px;
+  border: 4px solid #f1f1f1;
+  border-radius: 3px;
+  font-size: 10px;
 
-.modal-header {
-  background-color: #384B5D;
-  color: #fff;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-}
-.modal-body {
-  min-height: 100px;
-}
 
-#z_hub_modal {
-  div.popover {
-    &.left, &.top {
-      max-width:500px;
-    }
+  p {
+    margin: 2px 4px 2px 4px;
+    background-color: #FFFFFF;
+    padding: 10px 10px 0px 10px;
+    color: #7f7f7f;
+    height: 57px;
   }
-}
+  .breadcrumb {
+    box-shadow: none;
+    font-size: 10px;
+    line-height: 8px;
+    margin-bottom: 4px;
+    min-height: 25px;
 
-.green-header {
-  color:#fff;
-  padding: 10px;
-  font-size:18px;
-  background-color:#6ec5ab;
-  border-radius: 2px;
-
-  h2 {
-    font-size:19px;
-    color:#fff;
-    letter-spacing:0px;
-    margin:0px;
-  }
-}
-
-.tab-pane{
-  margin-top:10px;
-}
-
-.z-background {
-  background-image: url(asset_path('zuora-logo-faded.svg'));
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 75%;
-}
-
-.img-thumbnail-dark {
-  display: inline-block;
-  height: auto;
-  max-width: 100%;
-  padding: 4px;
-  line-height: 1.428571429;
-  background-color: #ffffff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.center{
-  text-align: center
-}
-
-td.center{
-  vertical-align: middle !important;
-  text-align: center
-}
-
-.word-break{
-  word-wrap: break-word;
-}
-
-h1.slim, h2.slim, h3.slim, h4.slim, h5.slim, h6.slim, hr.slim{
-  margin:5px 0px;
-}
-
-.translation_missing{
-  color: red;
-  font-size: 15px;
-}
-
-.input-sm, .input-group-sm > .form-control, .input-group-sm > .input-group-addon, .input-group-sm > .input-group-btn > .btn {
-  height: 30px;
-}
-.form-horizontal .form-control-feedback{
-  top: 0px;
-  right: 15px;
-  width: 34px;
-}
-.form-control-feedback {
-  position: absolute;
-  top: 20px;
-  right: 15px;
-  z-index: 2;
-  display: block;
-  width: 34px;
-  height: 30px;
-  line-height: 34px;
-  text-align: center;
-  pointer-events: none;
-}
-
-body nav {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 13px;
-  line-height: 16px
-}
-
-/***************** Bread Crumb *****************/
-.breadcrumb{
-  box-shadow: 0px 1px 2px #ccc;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  font-size: 12px;
-}
-
-
-/***************** Navbar  *****************/
-.navbar {
-  border: 0px solid transparent;
-
-  &.navbar-default .navbar-nav > li > a{
-    .caret {
-      font-size: 15px;
-      margin-left: 15px;
-    }
-    &:hover, &:focus {
-      .caret{
-        color: #6ec5ab;
-      }
+    > li + li:before {
+      content: "| ";
+      padding: 0 5px;
+      color: #dbdbdb;
     }
   }
 }
 
 
-/***************** Dropdown Menu Left  *****************/
-body nav .navbar-toggle.left {
-    display: block;
-    float: left;
-    /*
-    margin-right: 5px;
-    border: 0;
-    padding-left: 0;
-    margin-top: 6px;
-    width: 40px;
-    position: relative;
-    height: 30px;
-    cursor: pointer;
 
-    .icon-bar{
-      width: 20px;
-      margin-top: 4px;
-    }
-    */
-}
 
-/***************** Dropdown Menu Extra Styles  *****************/
-.dropdown-menu {
-  min-width: 164px;
-  padding: 6px 0;
-
-  > li > a {
-    padding: 4px 8px 4px 8px;
-    span.fa {
-      margin-right: 10px;
+.grid_view{
+  .chic-let{
+    a:visited {
+        color: #74818e;
     }
-    span.glyphicons {
-      padding-left: 0px;
-      margin-right: 4px;
-      &:before {
-        font-size: inherit;
-        position: inherit;
-        color: $dropdown-link-color;
-      }
+    a:link {
+        color: #6C96A1;
     }
-    &:hover{
-      span.glyphicons {
-        &:before {
-          color: $dropdown-link-hover-color;
-        }
-      }
-    }
-  }
-}
-
-/***************** Arrows for right navbar dropdown  *****************/
-@media (min-width: $grid-float-breakpoint-max) {
-  .navbar-right ul.dropdown-menu {
-    &:after, &:before {
-      bottom: 100%;
-      left: 89%;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
-      position: absolute;
-      pointer-events: none;
-    }
-    &:after {
-      border-color: rgba(136, 183, 213, 0);
-      border-bottom-color: $dropdown-bg;
-      border-width: 8px;
-      margin-left: -8px;
-    }
-    &:before {
-      border-color: rgba(194, 225, 245, 0);
-      border-bottom-color: $dropdown-border;
-      border-width: 9px;
-      margin-left: -9px;
-    }
-  }
-}
-
-/***************** Left Nav  *****************/
-.dataBox {
-  top: 50px;
-  border-radius: 0px;
-  width: 200px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border: 1px solid #F2F2E8;
-  border-bottom: none;
-  padding-right: 0px;
-  font-size: 15px;
-  z-index: 1;
-
-  > div.navigation {
-    text-align: right;
-    padding: 5px 10px;
-    background: #f1f1f1;
-    height: 32px;
-    > span {
-      cursor: pointer;
-      &.icon-nav-collase2, &.icon-nav-dock2{
-        color: #6ec5ab;
-        font-weight: bold;
-      }
-    }
-  }
-
-  ul {
-    padding-left:0;
-    margin:0;
-    list-style: none;
-
     a {
-      font-size: 14px;
-      display: block;
-      padding: 5px 0px;
-
-      &:hover, &:focus {
+        color: #384B5D;
         text-decoration: none;
-      }
-
-      i {
-        float: right;
-        font-size: 15px;
-        margin-right: 9px;
-        margin-top: 0px;
-        line-height: 1.5;
-        color: inherit;
-      }
-      span.fa {
-        width: 15px;
-        text-align: center;
-      }
     }
-    > li.dropdown {
-      ul.tools a, ul a{
-        font-size: 12px;
-        line-height: 20px;
-      }
-      > a {
-        color: #ffffff;
-        background-color: #6b7882;
-        padding: 5px 0 5px 13px;
-        line-height: 26px;
-
-        &.collapsed {
-          color:#384b5d;
-          background-color: #ffffff;
-        }
-      }
-      > div.collapse {
-        background-color:#f2f4f8;
-      }
-
-      /* Sub menu overides */
-      li {
-        padding-left: 29px;
-        a {
-          background-color: inherit !important;
-          color:#384b5d;
-
-          &.active, &:hover, &:focus {
-            color: #3399cc;
-          }
-        }
-      }
+    a {
+        background-color: transparent;
     }
+  }
+  @-webkit-keyframes iconHover {
+    0% {
+      opacity: 1; }
+    100% {
+      opacity: 0; } }
+
+      @-webkit-keyframes contentHover {
+    0% {
+      opacity: 0; }
+    100% {
+      opacity: 1; } }
+
+    .chic-let:hover .app-icon {
+      -webkit-animation: iconHover .1s linear forwards;
+      animation: iconHover .1s linear forwards;
+  }
+
+  .chic-let:hover .description {
+      display: inline-block;
+  }
+
+  .chic-let:hover {
+      box-shadow: 0 0 90px 10px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      z-index: 25;
+  }
+    .chic-let:hover .card-content {
+        width: 100%;
+        margin-left: 0px;
+        padding-right: 20px;
+        -webkit-animation: contentHover .4s linear forwards;
+        animation: contentHover .4s linear forwards;
+    }
+    .chic-let {
+        font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+        border: 1px solid #ebebeb;
+        border-radius: 5px;
+        padding: 7px 10px 10px 10px;
+        position: relative;
+        width: 32.333333%;
+        height: 115px;
+        margin: 5px;
+        z-index:1;
+        background: #ffffff;
+    }
+    .card {
+        max-height: 325px;
+        margin-top: 15px
+    }
+
+    .zuora-certified {
+        background: #4d4d4d;
+        padding: 5px 10px;
+        border-radius: 5px 0 5px 0;
+        color: #fff;
+        position: absolute;
+        top: 0;
+        left: 0;
+        box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.1);
+        font-size: 8px;
+        letter-spacing: .1em;
+        display: block;
+        width: 90px;
+        float: left;
+        z-index: 8;
+    }
+
+    .card a:link {
+        color: #4d4d4d;
+    }
+
+
+    .chic-let .partner-logo {
+        position: absolute;
+        max-width: 60px;
+        max-height: 40px;
+        top: 10px;
+        right: 10px;
+    }
+
+    .chic-let .app-icon {
+        height: 99px;
+        width: 99px;
+        border-radius: 5px;
+        margin-right: 10px;
+        position: relative;
+        -webkit-animation: icon .5s linear forwards;
+        animation: icon .5s linear forwards;
+    }
+
+
+    .chic-let .card-content {
+        position: absolute;
+        width: 244px;
+        top: 40px;
+        margin-left: 100px;
+    }
+
+    .chic-let .card-top{
+      margin-bottom: -53px;
+    }
+
+    .buttons{
+      display: none;
+    }
+    .chic-let:hover .buttons{
+      display: block;
+      padding: 5px;
+      width: 33.33%;
+      float: right;
+    }
+
+
+    .chic-let:hover .card-top {
+        -webkit-animation: iconHover .1s linear forwards;
+        animation: iconHover .1s linear forwards;
+    }
+
+    .chic-let .category {
+        font-size: 9px;
+        font-weight: 900;
+        line-height: 7px;
+        margin: 0 0 4px 0;
+        color: #9EB1C0;
+        letter-spacing: .06em;
+    }
+
+    .chic-let .app-title {
+        font-size: 17px;
+        line-height: 18px;
+        margin: -1px 0 0 0;
+        font-weight: 300;
+    }
+    .text-uppercase, .initialism {
+        text-transform: uppercase;
+    }
+
+
+    .chic-let .description {
+        font-size: 11px;
+        line-height: 16px;
+        display: none;
+        color: #9EB1C0;
+        font-weight: 300;
+    }
+
+  #watermark {
+    position: absolute;
+    font-size: 20px;
+    opacity: 0.4;
+    margin-top: -7px;
+    margin-left: -10px;
+    width: 100%;
+    font-weight: 100;
+    color: #6EC5AB;
   }
 }
 
-/***************** Footer  *****************/
-.footer{
-  > ul {
-    text-align: center;
-    padding: 10px 0px;
-    >li {
-      display: inline;
-      padding: 0px 10px;
-      color: #666;
-    }
-  }
-  > div {
-    text-align: center;
-    color: rgb(102, 102, 102);
-    margin-bottom: 12px;
-  }
+.btn.navy {
+    background-color: #384B5D;
+    color: #ffffff;
 }
+
+.btn.navy:hover {
+    background: #2d3c4a;
+}
+
+.icon-container{
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+}
+
+.text-uppercase, .initialism {
+    text-transform: uppercase;
+}
+
+.info-block .category {
+  margin-top: 10px;
+  color: #A9B4BF;
+}
+
