--- a/app/assets/stylesheets/zuora/tabs.scss
+++ b/app/assets/stylesheets/zuora/tabs.scss
@@ -18,7 +18,6 @@ div.green-header + ul.tab-header li a {
   padding: 0 30px;
   text-decoration: none;
   border: none;
-  border-radius: 5px 5px 0px 0px;
 }
 
 div.green-header + ul.tab-header li {
@@ -53,9 +52,9 @@ div.green-header + ul.tab-header li:not(.active) a:hover {
 }
 
 .modal-content ul.tab-header li a {
-  background: #909BA6;
+  background: #f1f1f1;
   text-shadow: none;
-  color: #fff;
+  color: #384B5D;
   float: left;
   font: bold 12px/35px 'Lucida sans', Arial, Helvetica;
   height: 35px;
@@ -70,9 +69,9 @@ div.green-header + ul.tab-header li:not(.active) a:hover {
   float: left;
 }
 
-.modal-content  ul.tab-header li.active a {
-  background: #fff;
-  color: #333;
+.modal-content ul.tab-header li.active a {
+  background: #384B5D !important;
+  color: #fff !important;
 }
 
 .modal-content  ul.tab-header li:not(.active) a:hover {
@@ -81,3 +80,23 @@ div.green-header + ul.tab-header li:not(.active) a:hover {
 }
 
 /* -------------------------- */
+
+
+.modal-header {
+  background-color: transparent !important;
+  color: #384B5D !important;
+}
+.modal-header {
+  border-bottom: 1px solid #f1f1f1 !important;
+}
+.modal-header .close {
+    margin-top: 5px !important;
+}
+
+
+.modal-content ul.tab-header li:not(.active) a:hover {
+  background: #eaebef !important;
+  color: #384B5D !important;
+}
+
+
